# diqwest

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: clippy.yml  rust.yml
src/: blocking.rs  common.rs  core.rs  error.rs  lib.rs
