[package]
name = "diqwest"
version = "1.2.1"
edition = "2021"
authors = ["Mathias Oertel <mathias.oertel@pm.me>"]
description = "Trait to extend reqwest for digest auth flow."
documentation = "https://docs.rs/diqwest"
readme = "README.md"
keywords = ["digest", "auth", "reqwest", "async"]
categories = ["authentication", "cryptography", "web-programming::http-client"]
license = "MIT"
repository = "https://github.com/maoertel/diqwest"

[features]
default = []
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = "0.1"
digest_auth = { version = "0.3", default-features = false }
reqwest = { version = "0.11", default-features = false }
url = "2.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1.1"
